--- a/src/chi/components/alert/_alert-common.scss
+++ b/src/chi/components/alert/_alert-common.scss
@@ -57,7 +57,7 @@ $states: (
   display: flex;
   font-family: $font-family-base;
   font-size: $font-size-base;
-  line-height: $line-height;
+  line-height: $line-height-base;
   padding: $alert-md-padding;
   position: relative;
   text-align: left;
