--- a/src/chi/components/expansion-panel/expansion-panel.scss
+++ b/src/chi/components/expansion-panel/expansion-panel.scss
@@ -226,7 +226,7 @@ $transition-duration: 0.2s;
 
         .chi-epanel__text {
           font-size: $font-size-base;
-          line-height: $line-height;
+          line-height: $line-height-base;
         }
       }
     }
@@ -284,7 +284,7 @@ $transition-duration: 0.2s;
 
         .chi-epanel__text {
           font-size: $font-size-base;
-          line-height: $line-height;
+          line-height: $line-height-base;
         }
       }
     }
