--- a/src/chi/components/header/header.scss
+++ b/src/chi/components/header/header.scss
@@ -296,7 +296,7 @@
 
     .chi-header__navbar-menu {
       display: flex;
-      line-height: $line-height;
+      line-height: $line-height-base;
       list-style: none;
       margin: 0.25rem 0;
       padding: 0 0.5rem;
