--- a/src/chi/components/range-slider/range-slider.scss
+++ b/src/chi/components/range-slider/range-slider.scss
@@ -241,7 +241,7 @@ $input-range-track-height: 0.25rem;
   &-label {
     font-size: $font-size-sm;
     left: -3.25rem;
-    line-height: $line-height;
+    line-height: $line-height-base;
     position: absolute;
     text-align: center;
     top: 0;
