--- a/src/chi/components/sidebar/sidenav.scss
+++ b/src/chi/components/sidebar/sidenav.scss
@@ -359,7 +359,7 @@ $sidenav-lg-width: 12.5rem;
         &.chi-sidenav__drawer-list {
           li {
             a {
-              line-height: $line-height;
+              line-height: $line-height-base;
               padding-right: 1.5rem;
 
               &.chi-drawer__subitem-list-trigger {
