--- a/src/chi/components/stat/stat.scss
+++ b/src/chi/components/stat/stat.scss
@@ -38,7 +38,7 @@
       font-size: $font-size-base;
       height: 100%;
       justify-content: $stat-content-justify-content;
-      line-height: $line-height;
+      line-height: $line-height-base;
       padding: $stat-content-padding;
       width: 100%;
 
