--- a/src/chi/components/card/card.scss
+++ b/src/chi/components/card/card.scss
@@ -76,7 +76,7 @@
     border: $card-content-border;
     border-radius: $card-content-border-radius;
     font-size: $font-size-base;
-    line-height: $line-height;
+    line-height: $line-height-base;
     padding: $card-content-padding;
     width: 100%;
 
@@ -101,7 +101,7 @@
       display: flex;
       flex-direction: column;
       font-size: $font-size-base;
-      line-height: $line-height;
+      line-height: $line-height-base;
       margin: 0;
       padding: 0;
     }
