--- a/src/chi/components/checkbox/checkbox.scss
+++ b/src/chi/components/checkbox/checkbox.scss
@@ -21,7 +21,7 @@
       display: inline-flex;
       font-size: $font-size-base;
       font-weight: $font-weight-normal;
-      line-height: $line-height;
+      line-height: $line-height-base;
       margin: 0;
       min-height: 1.25rem;
       padding-left: 1.5rem;
