--- a/src/chi/components/footer/footer.scss
+++ b/src/chi/components/footer/footer.scss
@@ -4,7 +4,7 @@
 .chi-footer {
   background-color: transparent;
   font-size: $font-size-base;
-  line-height: $line-height;
+  line-height: $line-height-base;
   width: 100%;
   z-index: 1;
 
