--- a/src/chi/components/modal/modal.scss
+++ b/src/chi/components/modal/modal.scss
@@ -101,7 +101,7 @@
 
   &__content {
     font-size: $font-size-base;
-    line-height: $line-height;
+    line-height: $line-height-base;
     overflow-y: auto;
     padding: $modal-content-padding;
   }
