--- a/src/chi/components/pagination/pagination.scss
+++ b/src/chi/components/pagination/pagination.scss
@@ -33,7 +33,7 @@ $icon-sizes: (
   flex-wrap: wrap;
   font-size: $font-size-base;
   justify-content: center;
-  line-height: $line-height;
+  line-height: $line-height-base;
 
   .chi-button-group {
     &:not(.-vertical) {
