--- a/src/chi/components/tabs/tabs.scss
+++ b/src/chi/components/tabs/tabs.scss
@@ -118,7 +118,7 @@
     & > li {
       & > a {
         font-size: $tabs-vertical-xl-font-size;
-        line-height: $line-height;
+        line-height: $line-height-base;
         padding-bottom: 1.125rem;
         padding-top: 1.125rem;
 
