--- a/src/chi/components/toggle-switch/toggle-switch.scss
+++ b/src/chi/components/toggle-switch/toggle-switch.scss
@@ -3,7 +3,7 @@
 
 .chi-switch {
   display: flex;
-  line-height: $line-height;
+  line-height: $line-height-base;
   margin: 0.25rem 0;
   position: relative;
 
@@ -12,7 +12,7 @@
     display: flex;
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
-    line-height: $line-height;
+    line-height: $line-height-base;
     margin-bottom: 0;
     margin-right: 0.5rem;
     padding: 0.125rem 0;
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     font-size: $font-size-2xs;
-    line-height: $line-height;
+    line-height: $line-height-base;
 
     & + .chi-switch__label {
       margin-left: 0.5rem;
