--- a/src/chi/themes/colt/typography/root-typography.scss
+++ b/src/chi/themes/colt/typography/root-typography.scss
@@ -6,5 +6,5 @@
 %root-typography {
   color: $color-text-base;
   font-family: $font-family-base;
-  line-height: $line-height;
+  line-height: $line-height-base;
 }
