[DPEDE-6370] Add Dynamic form group styles (#1950)
* [DPEDE-6370] Add Location styles

* [DPEDE-6370] Brought back formatting

* [DPEDE-6370] Changed location to dynamic form group

* [DPEDE-6370] Renamed file

* [DPEDE-6370] Adjusted margin

* [DPEDE-6370] Order of styles

---------

Co-authored-by: Wojciech Wlodarczyk <wojciechwlodarczyk@lumen.com>

--- a/src/chi/themes/centurylink/index.scss
+++ b/src/chi/themes/centurylink/index.scss
@@ -39,6 +39,7 @@ $theme: 'centurylink';
   @import '../../components/drag-and-drop/drag-and-drop';
   @import '../../components/drawer/drawer';
   @import '../../components/dropdown/dropdown';
+  @import '../../components/dynamic-form-group/dynamic-form-group';
   @import '../../components/expansion-panel/expansion-panel';
   @import '../../components/filters/filters';
   @import '../../components/flag-icon/flag-icon';
