--- a/tests/custom-elements/popover.pug
+++ b/tests/custom-elements/popover.pug
@@ -25,7 +25,7 @@ block content
 
   each side in moreSides
     div(class=`test-more-${side} -position--relative`, data-cy=`test-more-${side}`)
-      span.-text--h2=`Popper side ${side}`
+      span.-text--h2=`Floating side ${side}`
       .-d--flex.-justify-content--center.-align-items--center(style="margin: 120px 220px;")
         button(id=side).chi-button Popover
       chi-popover(position=side, title="Popover Title", variant="text", arrow, reference=`#${side}`, active)
